# DS-and-ML-Fundamental-Algorithms

./: LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: tests.yaml
decision_tree/: README.md  decision_tree.py  example.ipynb  test_decision_tree.py
genetic_algorithm/: README.md  example.ipynb  genetic_algorithm.py  test_genetic_algorithm.py
k_means_clustering/: README.md  example.ipynb  k_means_clustering.py  test_k_means_clustering.py
mlp/: README.md  example.ipynb  mlp.py  test_mlp.py
pca/: README.md  example.ipynb  pca.py  test_pca.py
ppo/: README.md  example.ipynb  ppo.py  test_ppo.py
q_learning/: README.md  example.ipynb  q_learning.py  test_q_learning.py
shapley/: README.md  example.ipynb  shapley.py  test_shapley.py
svm/: README.md  example.ipynb  svm.py  test_svm.py
tf_idf/: README.md  example.ipynb  test_tf_idf.py  tf_idf.py
tp_estimator/: README.md  example.ipynb  test_tp_estimator.py  tp_estimator.py
transformer/: README.md  example.ipynb  test_transformer.py  transformer.py
