[project]
name = "ds-and-ml-fundamental-algorithms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.5",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "ruff>=0.11.6",
    "scikit-learn>=1.6.1",
]
notebook = [
    "ipykernel>=6.29.5",
    "jupyter-black>=0.4.0",
    "scikit-learn>=1.6.1",
]
